--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
+# This file lists all individuals having contributided content to this Repository
+
 Brad Brown <>
 Grant Koski <grant.koski@atlasschool.com>
