--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributided content to this Repository
 
-Brad Brown <>
+Brad Brown <keepforeverstrong@gmail.com>
 Grant Koski <grant.koski@atlasschool.com>
